# cmtj

./: .dockerignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  BENCHMARK_README.md  CHANGELOG.md  CITATION.cff  CMTJ.md  Dockerfile  MANIFEST.in  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  STT.csv  SpinPyBindingsTutorial.ipynb  automators.py  benchmark_performance.py  compare_performance.sh  constants.py  environment.yaml  index.html  index.md  junction.py  junction.pyx  junction_list.pyx  junction_np.pyx  mkdoc.py__  mkdocs.yml  noSTT.csv  objects.inv  parse_profile.py  pyproject.toml  quick_benchmark.py  requirements.txt  ruff.toml  run.py  setup.cfg  setup.py  sitemap.xml  (+2 more)
.devcontainer/: devcontainer.json
.github/workflows/: cibuildwheel.yml  codeql-analysis.yml  docker-image.yml  main.yml  main.yml.disabled  package-release.yml  python-publish.yml  python-publish2.yml  python-test.yml
CMTJBindingsTutorial/: CMTJBindingsTutorial.ipynb  index.html
alpha/: Bindings.ipynb  Makefile  cmtj.cpp  cvector.hpp  junction.hpp  junction.json  junction.pyz  parallel.hpp  run.py  setup.py  solver.cpp  spinpy.cpp
api/core/: core.md  index.html
api/drivers/: drivers.md  index.html
api/energy-reference/: energy-reference.md  index.html
api/ensemble-reference/: ensemble-reference.md  index.html
api/filters-reference/: filters-reference.md  index.html
api/general-reference/: general-reference.md  index.html
api/linear-reference/: index.html  linear-reference.md
api/llgb/: index.html  llgb.md
api/main-reference/: index.html
api/noise/: index.html  noise.md
api/optimization-reference/: index.html  optimization-reference.md
api/parallel-reference/: index.html  parallel-reference.md
api/plotting-reference/: index.html  plotting-reference.md
api/procedures-reference/: index.html  procedures-reference.md
api/reservoir/: index.html
api/resistance-reference/: index.html
api/stack/: index.html  stack.md
autogen/: index.html
autogen/01_pimm___vsd_procedures_/: index.html
autogen/02_fieldscan_utilities_/: index.html
autogen/03_time_dependent_drivers__scalardriver___axialdriver__/: index.html
autogen/04_magnetic_layer_models__layersb___layerdynamic__/: index.html
autogen/05_domain_wall_dynamics__domainwalldynamics___multilayerwalldynamics__/: index.html
autogen/06_oersted_field___pinning_calculations_/: index.html
autogen/07_noise_generation_models_/: 07_noise_generation_models_.md  index.html
autogen/08_signal_filters_/: index.html
autogen/09_vector_objects__cvector___vectorobj__/: index.html
autogen/10_sb_solver__solver__/: index.html
changelog/: changelog.md  index.html
cmtj/: CMTJ.md  Makefile  __init__.py  __init__.pyi  cmtj.cpp  cvector.hpp  drivers.hpp  junction.hpp  parallel.hpp  setup.py  stack.hpp
cmtj.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt  requires.txt
cmtj/core/: __init__.py  __init__.pyi  compute.hpp  cvector.hpp  drivers.hpp  junction.hpp  stack.hpp
cmtj/cpp/: Makefile  stt.cpp
cmtj/llgb/: __init__.py  __init__.pyi
cmtj/models/: __init__.py  analytical_utils.py  domain_dynamics.py  drivers.py  ensemble.py  general_sb.py  noise.py  oersted.py  sb.ipynb  sb.py
cmtj/noise/: __init__.py  __init__.pyi
cmtj/python/: cmtj.cpp
cmtj/reservoir/: __init__.py  __init__.pyi
cmtj/stack/: __init__.py  __init__.pyi
cmtj/utils/: __init__.py  constants.py  demag.py  energy.py  filters.py  general.py  linear.py  optimization.py  parallel.py  plotting.py  procedures.py  resistance.py  solvers.py
core/: compute.hpp  constants.hpp  cvector.hpp  drivers.hpp  junction.hpp  llgb.hpp  noise.hpp  reservoir.hpp  stack.hpp
core/2.0/: abstract.hpp  afm.hpp  bindings.cpp  driver.hpp  fm.hpp  junction.hpp  llgb.hpp
curated-examples/: ahe_loops.py  cims-hysteresis.py  cims-stability-stability-diagram.py  fmr-basic.py  harmonic-hall.py  p-bit.py  sto.py  vsd-basic-field-scan.py  vsd-basic-freq-scan.py
deprecated/: experiment.cpp
docgen/: docgen.py  index.html
docker/: Dockerfile  Dockerfile.2.0  Dockerfile.app  Dockerfile.wheel
docs/: CMTJBindingsTutorial.ipynb  docgen.py  index.md  overview.md  requirements.txt  tipsandtricks.md
docs/api/: core.md  drivers.md  energy-reference.md  filters-reference.md  general-reference.md  linear-reference.md  llgb.md  noise.md  (+6 more)
examples/: CMTJBindingsTutorial.ipynb  PYMTJ example.ipynb  parameter_scan.py
experiment-manager/: database.go  experiment.go
gui/: main_view.py
overview/: index.html  overview.md
pymtj/: junction.pyx
python/: cmtj.cpp
scripts/: readme_copy.py
search/: search_index.json
switching/: index.html  switching.ipynb
test2.0/: test_abstract.cpp  test_afm.cpp  test_fm.cpp  test_junction.cpp  test_stt_sot.cpp
tests/: CMakeLists.txt  build_script.sh  conftest.py  dynamic_tests.sh  test_basic.py  test_basic_symbolic_fmr.py  test_constants.py  test_curated_examples.py  test_demag_factors.py  test_drivers.py  test_group_interaction.py  test_imports.py  test_layer.cpp  test_linearisation.py  test_llgb.cpp  test_llgb.py  test_models.py  test_procedures.py  test_reservoir.cpp  test_sanity.py  test_solvers.py  test_sot.cpp  test_sot_torques.py  test_stack.py  test_symbolic.py  test_vector.cpp
tests/assets/: bilayer_sb_fmr_8_point_sweep.json
tests/assets/curated_examples/: test_ahe_loops.json  test_cims_hysteresis.json  test_cims_stability.json  test_fmr_basic.json  test_harmonic_hall.json  test_pbit.json  test_sto.json  test_vsd_field_scan.json  test_vsd_freq_scan.json
tests/harmonics/: Harmonic.ipynb
tests/oscillating-stack/: Makefile  launch.sh  stack_exp.cpp
tests/pimm/: Makefile  launch.sh  pimm.py
tests/stt/: switching.ipynb
tests/stt-fields/: torque.ipynb  torque_mp.ipynb
tests/trajectories/: trajectory.ipynb
tests/vsd/: Makefile  launch.sh  vsd.cpp  vsd.py
tipsandtricks/: index.html  tipsandtricks.md
trajectory/: index.html  trajectory.ipynb
view/: autofit.py  domain.py  gradio_agent.py  helpers.py  nav.py  requirements.txt  simulation_fns.py  streamlit_app.py  utils.py
(+209 files in other folders)
