[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Stubs Only
    Typing :: Typed

[options.extras_require]
utils =
    matplotlib
    numpy
    scipy
    pandas
    tqdm
    multiprocess
    numba
    sympy
test =
    pytest
