[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Stubs Only
    Typing :: Typed

[options.extras_require]
utils =
    matplotlib
    numpy
    scipy
    pandas
    tqdm
    multiprocess
    numba
    sympy
test =
    pytest
    pytest-xdist

[tool:pytest]
addopts = -n auto --dist worksteal --maxfail=5
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
# Optional: markers for selective running
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    fast: marks tests as fast
    parametrized: marks parametrized tests
